# claude-agents-experiment

./: .gitignore  README.md  SETUP.md  app.py  pyproject.toml
documentation/: PLAN.md  bugs.md  current_state.md  logs.md  stats.md  tech_choix.md  token_usage.jsonl
examples/: async_demo.py  batch_demo.py  demo.py  eval_demo.py  teammate_demo.py  usage_report.py
src/: agents.py  config.py  doc_agent.py  memory.py  registry.py  teammate.py  token_optimization.py  tools.py
static/: index.html
tests/: test_agent.py  test_doc_agent.py  test_phase3.py  test_phase4.py  test_phase5.py  test_token_optimization.py  tests.md
