[project]
name = "claude-agents-experiment"
version = "0.1.0"
description = "Mini project: Claude agents with experimental patterns"
authors = [{name = "Piotr Kroczak", email = "your-email@example.com"}]
dependencies = [
    "anthropic>=0.103.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: calls the real Anthropic API (requires ANTHROPIC_API_KEY)",
]
addopts = "--basetemp=.pytest_tmp"
